# robot-framework-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  area_categories.json  pyproject.toml  requirements.txt
.claude/commands/: rf-triage.md
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  scoring.md  sql-examples.md  tools.md
examples/: claude_desktop_config.json  claude_mcp_config.json  generate_sample_report.py  mcp_stdio_wrapper.py  sample_failure_report.html  sample_output.xml  sample_output_previous.xml
examples/sample_results/: failure_matrix.html
examples/sample_results/Product_Authentication/robot/: output.xml
examples/sample_results/Product_Checkout/robot/: output.xml
examples/sample_results/Product_Payments/robot/: output.xml
examples/sample_results/Product_Search/robot/: output.xml
examples/sample_results/Product_User_Profile/robot/: output.xml
prompt_templates/: review_robot_failures.md
robot_mcp_server/: __init__.py  __main__.py  db.py  failure_matrix.py  html_report.py  http_server.py  mcp_adapter.py  models.py  parser.py  server.py
tests/: test_failure_matrix.py  test_parser.py
