[project]
name = "robot-framework-mcp-server"
version = "0.1.0"
description = "Local MCP-style server for Robot Framework output analysis and failure review."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  {name = "Matthew King", email = "matthewking182@gmail.com"}
]
keywords = ["robot-framework", "mcp", "test-automation", "failure-analysis", "claude"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: Robot Framework",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Intended Audience :: Developers",
]
dependencies = [
  "robotframework>=5.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
]
[project.optional-dependencies]
mcp = ["mcp"]
test = ["pytest>=8.0"]
[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["robot_mcp_server*"]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"
